# llm-run-debug

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: deltas.py  runs.py  trials.py
backend/app/core/: config.py  database.py  domain.py
backend/app/schemas/: __init__.py  deltas.py  runs.py  trials.py
backend/app/services/: delta_service.py  langsmith_service.py  llm_builder.py  patch_engine.py  run_runner.py  trial_service.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  components.js  deltas.js  diff.js  state.js  trials.js  ui.js
